<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login2"
        android:layout_width="320sp"
        android:layout_height="55sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_round"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button18"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button19"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="94sp"
        android:layout_height="26sp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="91dp"
        android:fontFamily="@font/inter"
        android:text="@string/signin_text"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/passwd_check"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nickname"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/birth"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sex"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/category_pick"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="88sp"
        android:layout_height="41sp"
        android:layout_marginTop="163dp"
        android:background="#E9E9E9"
        android:text="@string/doubleCheck"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="88sp"
        android:layout_height="41sp"
        android:layout_marginTop="437dp"
        android:background="#E9E9E9"
        android:text="@string/doubleCheck_nick"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/oriental"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button16"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/spicy"
        app:layout_constraintStart_toStartOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button19"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/powdery"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button15"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button18"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/watery"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button17"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/floral"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button12"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/dry"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/citrus"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/woody"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/musk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/aromatic"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button13"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/leather"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button14"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/minty"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button15"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/marine"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button10"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/honey"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/metalic"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F1F0F0"
        android:text="@string/green"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="326dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/write_email"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="@null" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/write_nick"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="nickname"/>

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/write_birth"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:autofillHints="birth"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="326dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:inputType="textPassword"
        android:text="HGHGHGH"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="passwordCheck"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/male"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        android:autofillHints="username" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/female"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

</androidx.constraintlayout.widget.ConstraintLayout>